--- a/day1/index.html
+++ b/day1/index.html
@@ -6,7 +6,7 @@
         <title>My First JS</title>
     </head>
     <body>
-        <script src="index.js"></script>
+        <script src="control.js"></script>
         <script>
             console.log("Internal Javascript");
         </script>
